# 060312-2-

./: .gitignore  Cargo.toml  README.md  config.toml
.claude/: settings.local.json
backend/: Cargo.toml
backend/src/: config.rs  errors.rs  main.rs
backend/src/api/: admin.rs  contributions.rs  leaderboard.rs  mod.rs  projects.rs  sync.rs  users.rs
backend/src/db/: mod.rs  queries.rs  schema.rs
backend/src/github/: client.rs  mod.rs  sync.rs  types.rs
backend/src/models/: contribution.rs  mod.rs  project.rs  score.rs  user.rs
backend/src/scoring/: calculator.rs
frontend/: Cargo.toml  index.html
frontend/src/: api.rs  app.rs  main.rs  types.rs
frontend/src/components/: bonus_form.rs  leaderboard.rs  mod.rs  navbar.rs  project_list.rs  settings.rs  user_card.rs
frontend/src/pages/: admin_page.rs  home.rs  leaderboard_page.rs  mod.rs  profile_page.rs  projects_page.rs  settings_page.rs
static/: style.css
