[package]
name = "contributor-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-files = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
thiserror = "1"
